--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//    implementation project(':utakephoto')
-    implementation 'com.sl.utakephoto:uTakePhoto:1.0.1'
+    implementation project(':utakephoto')
 }
