--- a/utakephoto/build.gradle
+++ b/utakephoto/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.novoda.bintray-release'
 
 
 android {
@@ -26,15 +26,15 @@ android {
 
 }
 
-//publish {
-//    userOrg = 'jkl446041'
-//    groupId = 'com.sl.utakephoto'
-//    artifactId = 'uTakePhoto'
-//    publishVersion = '1.0.4'
-//    desc = 'This is a project to help take and select photos'
-//    website = 'https://github.com/songlongGithub/uTakePhoto'
-//    uploadName = 'uTakePhoto'
-//}
+publish {
+    userOrg = 'jkl446041'
+    groupId = 'com.sl.utakephoto'
+    artifactId = 'uTakePhoto'
+    publishVersion = '1.0.5'
+    desc = 'This is a project to help take and select photos'
+    website = 'https://github.com/songlongGithub/uTakePhoto'
+    uploadName = 'uTakePhoto'
+}
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
