修改自定义裁剪时，裁剪框默认贴着边框，不容易选择的问题

--- a/utakephoto/build.gradle
+++ b/utakephoto/build.gradle
@@ -30,7 +30,7 @@ android {
 //    userOrg = 'jkl446041'
 //    groupId = 'com.sl.utakephoto'
 //    artifactId = 'uTakePhoto'
-//    publishVersion = '1.1.0-alpha'
+//    publishVersion = '1.1.0'
 //    desc = 'This is a project to help take and select photos'
 //    website = 'https://github.com/songlongGithub/uTakePhoto'
 //    uploadName = 'uTakePhoto'
