--- a/utakephoto/build.gradle
+++ b/utakephoto/build.gradle
@@ -1,17 +1,17 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.novoda.bintray-release'
 
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.3"
 
 
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 30
         versionCode 10
-        versionName "1.1.1"
+        versionName "1.1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -26,15 +26,15 @@ android {
 
 }
 
-//publish {
-//    userOrg = 'jkl446041'
-//    groupId = 'com.sl.utakephoto'
-//    artifactId = 'uTakePhoto'
-//    publishVersion = '1.1.1'
-//    desc = 'This is a project to help take and select photos'
-//    website = 'https://github.com/songlongGithub/uTakePhoto'
-//    uploadName = 'uTakePhoto'
-//}
+publish {
+    userOrg = 'jkl446041'
+    groupId = 'com.sl.utakephoto'
+    artifactId = 'uTakePhoto'
+    publishVersion = '1.1.2'
+    desc = 'This is a project to help take and select photos'
+    website = 'https://github.com/songlongGithub/uTakePhoto'
+    uploadName = 'uTakePhoto'
+}
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
